Projeye son düzenlemeler eklendi

--- a/MyPortfolioCore/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
+++ b/MyPortfolioCore/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
@@ -29,10 +29,10 @@
                         <i class="la la-envelope"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Gelen Mesajlar</a>
+                        <a class="dropdown-item" href="/Message/Inbox">Gelen Mesajlar</a>
                         <a class="dropdown-item" href="#">Yeni Mesajlar</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">İletişim Paneli</a>
+                        <a class="dropdown-item" href="Contact/Index">İletişim Paneli</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown hidden-caret">
