--- a/MyPortfolioCore/Views/Shared/Components/_AboutComponentPartial/Default.cshtml
+++ b/MyPortfolioCore/Views/Shared/Components/_AboutComponentPartial/Default.cshtml
@@ -29,10 +29,12 @@
     <div class="row about-content about-content--buttons">
 
         <div class="col-six tab-full left">
-            <a href="#0" class="btn btn--primary full-width">Download My CV</a>
+            <a href="/files/lorem-ipsum.pdf" class="btn btn--primary full-width" download>CV'mi İndir</a>
+
         </div>
         <div class="col-six tab-full right">
-            <a href="#0" class="btn full-width">Hire Me Now</a>
+            <a href="#contact" class="btn full-width">Benimle Çalış</a>
+
         </div>
 
     </div> <!-- end about-content buttons -->
