--- a/MyPortfolioCore/Views/Shared/Components/_ExperienceComponentPartial/Default.cshtml
+++ b/MyPortfolioCore/Views/Shared/Components/_ExperienceComponentPartial/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="row about-content about-content--timeline">
 
     <div class="col-full text-center">
-        <h3>İş ve Proje Deneyimlerim</h3>
+        <h3>Deneyimlerim</h3>
     </div>
 
 
