--- a/MyPortfolioCore/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/MyPortfolioCore/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -37,7 +37,7 @@
         </div>
         <ul class="nav">
             <li class="nav-item">
-                <a href="index.html">
+                <a href="/Statistic/Index">
                     <i class="la la-dashboard"></i>
                     <p>Dashboard</p>
                 </a>
@@ -49,7 +49,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="components.html">
+                <a href="/About/Index">
                     <i class="la la-table"></i>
                     <p>Hakkımda</p>
                 </a>
@@ -67,37 +67,37 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="tables.html">
+                <a href="/Skill/Index">
                     <i class="la la-th"></i>
-                    <p>Öne Çıkan Alan</p>
+                    <p>Uzmanlık Alanları</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
+                <a href="/Contact/Index">
                     <i class="la la-bell"></i>
                     <p>İletişim Bilgileri</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="typography.html">
+                <a href="/Portfolio/Index">
                     <i class="la la-font"></i>
                     <p>Portfolio</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/Feature/Index">
                     <i class="la la-fonticons"></i>
                     <p>Yeteneklerim</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/Testimonial/Index">
                     <i class="la la-fonticons"></i>
                     <p>Referanslarım</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/SocialMedia/Index">
                     <i class="la la-fonticons"></i>
                     <p>Sosyal Medya</p>
                 </a>
